fix market header and collapse nav bar earlier

--- a/app/static/css/site.styl
+++ b/app/static/css/site.styl
@@ -173,6 +173,11 @@ select.input-extra-height
   .right
     text-align right
 
+.affix
+  width: 100%
+  top: 51px
+  z-index: 2000
+
 .navbar-admin
   background-color: red
 
